duration is enough, limit now also works for me just in 'toList()' method